<resources>
    <string name="app_name">BloodBank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dismiss">dismiss</string>
    <string name="skip">skip</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password"><u>forget password??!</u> </string>
    <string name="login">Login</string>
    <string name="creat_new_account">Creat new account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="articles">Articles</string>
    <string name="donation_requests">Donation Requests</string>

</resources>
