<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_home_item_profile"
            android:icon="@drawable/profile_36"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/activity_home_item_alarm"
            android:icon="@drawable/alarm_36"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/activity_home_item_favorait"
            android:icon="@drawable/favorit_36"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/activity_home_item_home"
            android:icon="@drawable/home_36"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/activity_home_item_list_user"
            android:icon="@drawable/list_36"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/activity_home_item_massage"
            android:icon="@drawable/massage_36"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/activity_home_item_about_us"
            android:icon="@drawable/about_36"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/activity_home_item_star"
            android:icon="@drawable/start_36"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/activity_home_item_logout"
            android:icon="@drawable/logout_36"
            android:title="@string/menu_tools" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
